only trigger pypi push on main

--- a/.drone.yml
+++ b/.drone.yml
@@ -40,6 +40,10 @@ steps:
 - name: pypi_publish
   image: plugins/pypi
   depends_on: [ test_unit ]
+  when:
+    branch:
+      include:
+        - master
   settings:
     username:
       from_secret: pypi_username
